@@ -1,3 +1,13 @@
+Fri Dec  5 15:38:23 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * ace/UUID.h:
+        * ace/UUID.cpp:
+
+          Made the to_string () method non-mutable, and the as_string_
+          member variable 'mutable'. This allows 'const ACE_Utils::UUID'
+          objects to use to to_string () method since that method is
+          not changing the value of the UUID.
+
 Thu Dec  4 11:07:35 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/tao_orb_tests.lst:
